# Azalyx-CX-C

./: .gitignore  CMakeLists.txt  Docker_README.txt  Dockerfile  LICENSE  README.md  README.txt  README_Docker.txt  README_OpenBSD.txt  README_SQLite3.txt  README_UbuntuDebian.txt  TODO.txt  cli_arguments.c  cli_arguments.h  configuration.c  configuration.h  crypto_aes.c  crypto_aes.h  crypto_rsa.c  crypto_rsa.h  docker_build.sh  docker_make.sh  docker_run.sh  indent.pro  main.c  service.c  service.h  service_dns.c  service_dns.h  service_http.c  service_http.h  service_smtp.c  service_smtp.h
examples/: aes.c  configuration-example.ini
linux_build/: build.sh
sql/: generate_sql_data_structures.pl  sqlite.sql
src/: cli_arguments.c  cli_arguments.h  configuration.c  configuration.h  crypto_aes.c  crypto_aes.h  crypto_rsa.c  crypto_rsa.h  database_sqlite.c  database_sqlite.h  main.c  service.c  service.h  service_dns.c  service_dns.h  service_http.c  service_http.h  service_smtp.c  service_smtp.h
src/cli/: cli_arguments.c  cli_arguments.h
src/configuration/: configuration.c  configuration.h
src/crypto/aes/: crypto_aes.c  crypto_aes.h
src/crypto/rsa/: crypto_rsa.c  crypto_rsa.h
src/database/: database.c  database.h  database_sqlite.c  database_sqlite.h
src/database/sqlite3/: sqlite3.c  sqlite3.h
src/database/sqlite3/tables/: envelope.c  envelope.h  envelope_body.c  envelope_body.h  envelope_chunk.c  envelope_chunk.h  envelope_fault.c  envelope_fault.h  envelope_headers.c  envelope_headers.h  log.c  log.h  queue.c  queue.h  request_response.c  request_response.h  service.c  service.h  session.c  session.h
src/service/: service.c  service.h
src/service/dns/: service_dns.c  service_dns.h
src/service/http/: service_http.c  service_http.h
src/service/smtp/: service_smtp.c  service_smtp.h
